...
                FloatingActionButton(
                    onClick = { expanded = !expanded },
                    shape = CircleShape,
                    containerColor = bgColor,
                    modifier = Modifier
                        .size(56.dp)
                        .testTag("MCF")
                ) {
                    Icon(
                        currentIcon,
                        contentDescription = null,
                        tint = iconColor,
                        modifier = Modifier
...
